# Cpp_plots-charts

./: .gitignore  CMakeLists.txt  Makefile  README.md  install_dependencies.sh  run_main.sh
doc/: config
doc/html/: annotated.html  classColumnGraph-members.html  classColumnGraph.html  classColumnGraph__coll__graph.map  classColumnGraph__inherit__graph.md5  classDataSerie-members.html  classDataSerie.html  classGraph-members.html  classGraph.html  classGraph__coll__graph.map  classGraph__coll__graph.md5  classGraph__inherit__graph.map  classGraph__inherit__graph.md5  classLinearGraph-members.html  classLinearGraph.html  classLinearGraph__coll__graph.md5  classLinearGraph__inherit__graph.map  classPieGraph-members.html  classPieGraph.html  classPieGraph__coll__graph.md5  classPieGraph__inherit__graph.map  classWindow-members.html  classWindow.html  classWindow__inherit__graph.map  classWindow__inherit__graph.md5  classes.html  colors_8cpp.html  colors_8cpp__incl.map  colors_8cpp__incl.md5  colors_8hpp.html  colors_8hpp__dep__incl.map  colors_8hpp__dep__incl.md5  colors_8hpp__incl.map  colors_8hpp__incl.md5  colors_8hpp_source.html  columnGraph_8hpp_source.html  dataSerie_8hpp_source.html  dir_000001_000003.html  dir_000002_000003.html  dir_000004_000008.html  (+101 more)
doc/latex/: annotated.tex  classColumnGraph.tex  classColumnGraph__coll__graph.md5  classDataSerie.tex  classGraph.tex  classGraph__coll__graph.md5  classGraph__inherit__graph.md5  classLinearGraph.tex  classLinearGraph__inherit__graph.md5  classPieGraph.tex  classPieGraph__coll__graph.md5  classWindow.tex  classWindow__inherit__graph.md5  colors_8cpp.tex  colors_8cpp__incl.md5  colors_8hpp.tex  files.tex  (+24 more)
software/: CMakeLists.txt
software/app/: CMakeLists.txt
software/app/src/: main.cpp
software/lib/graph/: CMakeLists.txt  dataSerie.cpp  dataSerie.hpp  graph.cpp  graph.hpp
software/lib/graph/column/: columnGraph.cpp  columnGraph.hpp
software/lib/graph/linear/: linearGraph.cpp  linearGraph.hpp
software/lib/graph/pie/: pieGraph.cpp  pieGraph.hpp
software/lib/shapes/: CMakeLists.txt  shapes.cpp  shapes.hpp
software/lib/utils/: CMakeLists.txt  colors.cpp  colors.hpp  font.cpp  font.hpp
software/lib/window/: CMakeLists.txt  window.cpp  window.hpp
(+35 files in other folders)
